# chip_norm

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/commands/: architect.md  cleanup.md  implement.md  onboard.md  plan.md  review.md  sync.md
.devcontainer/: Dockerfile  devcontainer.json
.genai/: architecture_brief.md  project_brief.md  todo.md  troubleshooting_solutions.md
.genai/reviews/: task_group_1_establish_configuration_driven_path_management_20250804_150000.md  task_group_2_build_foundational_test_suite_for_critical_components_20250804_153000.md  task_group_3_refactor_dataset_and_data_loading_logic_20250804_154500.md  task_group_4_implement_the_unified_trainer_20250804_160000.md  task_group_5_final_approval_20250805_143000.md  (+7 more)
configs/: config.yaml
docs/: CHANGELOG.md  README.md  analysis.md  data.md  future_work.md  gene_expression_evaluation_plan.md  models.md  project_brief.md  scratch.md  training.md  utils.md
notebooks/: check_training_progress.ipynb  eda.ipynb
runs/: base_train_mu_r.py  base_train_mu_r_old.py
scripts/: convert_legacy_data.py  download_data.py  get_metadata.py  preprocess.py  run.py
tests/: distributions.py  test_advanced_losses.py  test_checkpointing.py  test_config_extension.py  test_config_files.py  test_e2e_system.py  test_legacy_data_converter.py  test_legacy_experiment_config.py  test_minimal_model.py  test_synthetic_data_generator.py  test_trainer_enhancements.py  test_validation_metrics.py  test_wandb_mock.py
(+350 files in other folders)
