[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chip_norm"
version = "0.1.0"
requires-python = "~=3.12" 
dependencies = [
    "pandas",
    "requests",
    "numpy",
    "hydra-core",
    "pytest",
    "torch",
    "pre-commit",
    "matplotlib",
    "scikit-learn",
    "wandb",
    "seaborn",
    "einops"
]

[tool.setuptools.packages.find]
include = ["chipvi*"]


[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "ipython",
]
